[mod] 20251031 增加GC相关知识点